<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_IOT"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".IOTActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/imgProfile"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:layout_toEndOf="@+id/imgProfile"
                android:textColor="?attr/colorOnSurface"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/name_example" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imgProfile"
                android:layout_marginStart="7dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="-99dp"
                android:layout_toEndOf="@+id/imgProfile"
                android:textColor="?attr/colorOnSurface"
                android:textSize="14sp"
                tools:text="@string/address_example" />

            <Button
                android:id="@+id/btnEditProfile"
                android:layout_width="122dp"
                android:layout_height="37dp"
                android:layout_alignTop="@+id/tvName"
                android:layout_marginStart="171dp"
                android:layout_marginTop="55dp"
                android:layout_marginBottom="12dp"
                android:layout_toEndOf="@+id/imgProfile"
                android:backgroundTint="?attr/colorOnSurface"
                android:text="@string/editProfile"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="?attr/colorSurface"
                android:textSize="12sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvIOT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSurface"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/tvIOTResult" />

        <ImageView
            android:id="@+id/imgIOT"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="@+id/tvIOT"
            android:contentDescription="@string/imgIOT"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvNameIOT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@+id/imgIOT"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSurface"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/tvNameIOT" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@+id/tvNameIOT"
            tools:listitem="@layout/item_row_parameter" />
    </LinearLayout>
</ScrollView>