<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingMenuFragment">

    <Button
        android:id="@+id/theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="48dp"
        android:text="@string/theme"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#33AAAAAA" />

    <Button
        android:id="@+id/about"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/about"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/language"
        app:layout_constraintStart_toStartOf="@+id/language"
        app:layout_constraintTop_toBottomOf="@+id/language"
        app:rippleColor="#33AAAAAA" />

    <Button
        android:id="@+id/language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/language"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/theme"
        app:layout_constraintStart_toStartOf="@+id/theme"
        app:layout_constraintTop_toBottomOf="@+id/theme"
        app:rippleColor="#33AAAAAA" />

    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:text="@string/signOut"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about" />

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/btnSignOut" />
</androidx.constraintlayout.widget.ConstraintLayout>