<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingMenu">

    <Button
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="656dp"
        android:text="@string/account"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="textStart"
        android:backgroundTint="@color/white"
        app:cornerRadius="8dp"
        app:rippleColor="#33AAAAAA"
        android:strokeColor="@color/color_primary"
        app:strokeWidth="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="656dp"
        android:text="@string/theme"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="textStart"
        android:backgroundTint="@color/white"
        app:cornerRadius="8dp"
        app:rippleColor="#33AAAAAA"
        android:strokeColor="@color/color_primary"
        app:strokeWidth="2dp"
        app:layout_constraintTop_toBottomOf="@+id/account"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="656dp"
        android:text="@string/language"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="textStart"
        android:backgroundTint="@color/white"
        app:cornerRadius="8dp"
        app:rippleColor="#33AAAAAA"
        android:strokeColor="@color/color_primary"
        app:strokeWidth="2dp"
        app:layout_constraintTop_toBottomOf="@+id/theme"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="656dp"
        android:text="@string/about"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="textStart"
        android:backgroundTint="@color/white"
        app:cornerRadius="8dp"
        app:rippleColor="#33AAAAAA"
        android:strokeColor="@color/color_primary"
        app:strokeWidth="2dp"
        app:layout_constraintTop_toBottomOf="@+id/language"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:backgroundTint="@color/color_primary"
        android:text="@string/signOut"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textSize="16sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/btnSignOut" />
</androidx.constraintlayout.widget.ConstraintLayout>