<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/sign_up_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="fitXY"
        android:src="@drawable/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sign_up" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:alpha="0.68"
        android:text="@string/sign_up_text"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_image" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        android:textColor="?attr/colorOnSurface"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/sign_up_text"
        app:layout_constraintTop_toBottomOf="@id/sign_up_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:labelFor="@id/label_name"
        app:boxBackgroundColor="?attr/colorSurface"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/label_name"
        app:layout_constraintTop_toBottomOf="@id/label_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/person"
            android:drawablePadding="8dp"
            android:hint="@string/name_example"
            android:inputType="textPersonName"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/label_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/email"
        android:textColor="?attr/colorOnSurface"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/name_container"
        app:layout_constraintTop_toBottomOf="@+id/name_container" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:labelFor="@id/label_name"
        app:boxBackgroundColor="?attr/colorSurface"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/label_email"
        app:layout_constraintTop_toBottomOf="@+id/label_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/email"
            android:drawablePadding="8dp"
            android:hint="@string/email_example"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/label_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/password"
        android:textColor="?attr/colorOnSurface"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/email_container"
        app:layout_constraintTop_toBottomOf="@+id/email_container" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:labelFor="@id/label_password"
        app:boxBackgroundColor="?attr/colorSurface"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/label_password"
        app:layout_constraintTop_toBottomOf="@+id/label_password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/password"
            android:drawablePadding="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/label_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/by_signing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:text="@string/by_signing_text"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/terms"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/password_container"
        app:layout_constraintTop_toBottomOf="@+id/password_container" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/terms_text"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintEnd_toEndOf="@+id/password_container"
        app:layout_constraintStart_toEndOf="@+id/by_signing"
        app:layout_constraintTop_toBottomOf="@+id/password_container" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="28dp"
        android:text="@string/sign_up"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="@+id/terms"
        app:layout_constraintStart_toStartOf="@+id/by_signing"
        app:layout_constraintTop_toBottomOf="@+id/terms" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="@+id/btn_sign_up"
        app:layout_constraintStart_toStartOf="@+id/btn_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_up"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clickable_login"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/have_account"
        app:layout_constraintStart_toStartOf="@+id/have_account"
        app:layout_constraintTop_toBottomOf="@+id/have_account" />

</androidx.constraintlayout.widget.ConstraintLayout>