<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailProfileIOTFragment"
    tools:ignore="ScrollViewCount">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgProfileIOT"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/imgProfile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnChangeProfileIOT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:background="?attr/colorSurface"
        android:contentDescription="@string/btnChangeProfile"
        android:src="@drawable/ic_change_profile"
        app:backgroundTint="?attr/colorSurface"
        app:fabCustomSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="@+id/imgProfileIOT"
        app:layout_constraintTop_toTopOf="@+id/imgProfileIOT" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_name_iot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/namePlant"
        android:textColor="?attr/colorOnSurface"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnChangeProfileIOT" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:labelFor="@id/label_name"
        app:boxBackgroundColor="?attr/colorSurface"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/label_name_iot"
        app:layout_constraintTop_toBottomOf="@id/label_name_iot">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name_iot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:hint="@string/name_example_iot"
            android:inputType="textPersonName"
            android:padding="16dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSaveChangeIOT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/saveChange"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_container" />

</androidx.constraintlayout.widget.ConstraintLayout>